# python_studies

./: .gitignore  LICENSE  Makefile  pyproject.toml
notebooks/: adicionar_data_hora_caminho_arquivo.ipynb  dictionary.ipynb  lambda.ipynb  map.ipynb
om/: extracted_text.txt  lili_1.py  lili_3.py  om.xlsx  oms copy 10.py  oms copy 12.py  oms copy 2.py  oms copy 7.py  oms copy 9.py  oms copy.py  oms copy_pandas.py  oms.py  output_data.json  output_data.xlsx  training_data.spacy  ~$output_data.xlsx
om/extrair_orm/: om.py  om_02.py  om_03.py  om_04.py  om_05.py  om_06.py  om_07.py  output_info.json
om/mnt/data/: cc.py  extracted_data_cc.json  extracted_data_prioridade copy.json  extracted_priorities.json  extracted_priorities.txt  main.py  prioridade.py  training_data.spacy  training_data_cc.spacy
om/mnt/data/ner_model/: config.cfg  meta.json
om/mnt/data/ner_model/ner/: model  moves
om/mnt/data/ner_model_cc/: meta.json
om/mnt/data/ner_model_cc/ner/: model
om/mnt/data/ner_model_cc/vocab/: strings.json
om/mnt/data/ner_model_prioridade/ner/: model  moves
om/ner_model/: config.cfg  meta.json
om/ner_model/vocab/: strings.json
om/test/: extracted_data.json  extracted_data.xlsx  test_01.py
om/v1/: oms copy 3.py  oms copy 4.py  oms copy 5.py  oms copy 6.py  oms copy 8.py  oms copy 9.py  oms copy_pandas.py  oms.py
om/v2/: app.py  combined_maintenance_data.json  extract_maintenance_order_data.py  lang_chain.py  main.py  main_1.py  main_12.py  main_3.py  main_6.py  om_10.py  output_info.json  output_info.xlsx  print_pdf.py  report.ipynb
om/v2/analizar/: analisar.py  combined_maintenance_data.json  maintenance_analysis.xlsx
om/v2/func/: alanilzar_pdf.py  extract_maintenance_order_data.py  juntar_pdf.py  nao sie.py  print_pdf.py  test_equip.py
om/v2/output_pdfs/: combined_maintenance_data.json  combined_maintenance_data.xlsx
om/v2/test/: main_2.py  main_3_2.py  main_6.py  main_6_2.py  main_9.py  om_03.py  om_04.py  om_05.py  om_05_1.py  om_06.py  om_07.py  om_09.py  om_09_1.py
om/v3/: accuracy_report.json  cc.py  extracted_centro_custo.json  extracted_data.json  extracted_data_prioridade.json  extracted_text.txt  prioridade copy.py  training_data_prioridade.spacy
om/v3/ner_model/vocab/: strings.json
om/v3/ner_model_cc/ner/: moves
om/v3/ner_model_prioridade/: meta.json
om/v3/ner_model_prioridade/vocab/: strings.json
om/v4/: extractors.py  extractors_2.py  helpers.py  main.py  main_3.py  ordem_de_manutencao.xlsx  pdf_processing.py  pdf_processing_2.py  utils.py
om/v4/output_pdfs/: combined_maintenance_data.json  combined_maintenance_data.xlsx
om/v4/refator/: main.py
om/v4/test/: extractors_2.py  main.py  main_1.py
password_manager/: template.py
password_manager/db/: Password.txt
password_manager/keys/: key.key
password_manager/models/: password.py
password_manager/views/: password_views.py
src/: Adicionar data e hora ao caminho de arquivo com Python.ipynb  Post-it.ipynb  arquivo.xlsx  match.ipynb  oms.ipynb  pdf.ipynb  table_webscraping_pandas.py
src/creating-and-modifying-pdfs/source_code/: 01-extracting-text-from-a-pdf.py  01-save_to_txt.py  01_.ipynb  02-extracting-pages-from-a-pdf.py  02_extracting_pages_from_a_pdf.ipynb  03_.ipynb  04_.ipynb  05_.ipynb  06_.ipynb
src/dictionary/: dictionary.ipynb  dictionary.py
src/docling/: main.ipynb  main.py
src/lambda/: lambda.ipynb  lambda.py
src/opencv/: main.py
src/pandas/: Pandas_mais_rapido.ipynb
src/pdf/: pdf.py
src/threading/: threading_1.py  threading_2.py  threading_3.py
src/training_certificate/: cert_rac_5.html  main.py
